gccida/g1/set_init_index
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_init_index/src/c-typeck.c:6189:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_init_index/src/c-typeck.c:6273:25: error: use of undeclared identifier 'constructor_range_stack_0'
if ( ( unsigned __int64)constructor_range_stack_0 | ( unsigned __int64)elements ) 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_init_index/src/obj/c-typeck.o] Error 1
